KNL-11
Fixed, removed sun.misc import.


git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@51220 66ffb92e-73f9-0310-93c1-f5514f145a0a